sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:14: error: '(' expected but identifier found.
      if plusPetit(lgr-1-i:Int, lgr-1-i-1) {
         ^AlgCocktailSort1:18: error: illegal start of simple expression
    }
    ^